<resources>
    <string name="app_name">Route to Market</string>
    <string name="apikey">0GnqeXeroFjx1WO86oHtJzekPzOFGJhZmKYDe4A</string>
    <string name="error_not_network_message">Por favor, verifica tu conexión de datos o intenta en unos minutos.</string>
    <string name="wait_message">Por favor, espera un momento.</string>
    <string name="error_generico_process">Ocurrio un error al procesar la operación, por favor vuelve a intentar.</string>
    <string name="menu_inicio_prospector">Prospector</string>
    <string name="menu_inicio_desarrollador">Desarrollador</string>
    <string name="menu_inicio_red">Red</string>
    <string name="menu_inicio_multimedia">Multimedia</string>
    <string name="menu_inicio_ficha">Desarrollo Cliente</string>
    <string name="menu_inicio_mmil">MMil</string>
    <string name="menu_inicio_ventacero">Venta Cero</string>
    <string name="ver_foto_web_title">Documento</string>
    <string name="login_activity_title">Corporación Lindley</string>
    <string name="login_activity_ok">Bienvenido: %s.</string>
    <string name="login_activity_error">%s</string>
    <string name="login_activity_txtlogin_empty">Debes ingresar tu usuario</string>
    <string name="login_activity_txtpassword_empty">Debes ingresar tu password</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="consultar_cliente_activity_title">Buscar Cliente</string>
    <string name="consultar_cliente_activity_sub_title">Buscar Cliente</string>
    <string name="consultar_cliente_activity_empty">Debes ingresar el código o ruc o dni</string>
    <string name="consultar_cliente_local_activity_title">Buscar Cliente Local</string>
    <string name="consultar_cliente_local_activity_empty">Debes ingresar el código o ruc o dni</string>
    <string name="consultar_cliente_local_activity_delete_confirm_dialog">¿Desea eliminar el cliente seleccionado?</string>
    <string name="consultar_cliente_local_activity_delete_confirm_dialog_si">Si</string>
    <string name="consultar_cliente_local_activity_delete_confirm_dialog_no">No</string>
    <string name="consultar_cliente_local_activity_delete_confirm_eliminada">Ficha Eliminada</string>
    <string name="registrar_cliente_activity_title">Registrar Cliente</string>
    <string name="registrar_cliente_activity_btnDireccion">Direcciones</string>
    <string name="registrar_cliente_activity_btnDatosGenerales">Datos Generales</string>
    <string name="registrar_cliente_activity_btnDatosCartera">Datos Cartera</string>
    <string name="registrar_cliente_activity_btnUbicacion">Ubicación</string>
    <string name="registrar_cliente_activity_btnGuardar">Guardar</string>
    <string name="registrar_cliente_activity_btnMicrosegmentacion">Microsegmentación</string>
    <string name="registrar_cliente_activity_datos_basicos_txtrazonsocial_error">Debes ingresar la razón social</string>
    <string name="registrar_cliente_activity_datos_basicos_txtruc_error">Debes ingresar el ruc</string>
    <string name="registrar_cliente_activity_datos_basicos_txtruc_no_valido">El ruc ingresado no es válido</string>
    <string name="registrar_cliente_activity_datos_basicos_txtdni_error">Debes ingresar el dni</string>
    <string name="registrar_cliente_activity_datos_basicos_txtRucDni_error">Debes ingresar el ruc o dni</string>
    <string name="registrar_cliente_activity_datos_basicos_txtrepresentante_error">Debes ingresar el representante</string>
    <string name="registrar_cliente_activity_datos_basicos_subcanal_error">Debes seleccionar un subcanal</string>
    <string name="registrar_cliente_activity_datos_basicos_direccionfiscal_error">Debes ingresar la dirección fiscal</string>
    <string name="registrar_cliente_activity_datos_basicos_direccionentrega_error">Debes ingresar la dirección entrega</string>
    <string name="registrar_cliente_activity_datos_basicos_departamentoentrega_error">Debes seleccionar el departamento de entrega</string>
    <string name="registrar_cliente_activity_datos_basicos_provinciaentrega_error">Debes seleccionar el departamento de entrega</string>
    <string name="registrar_cliente_activity_datos_basicos_distritoentrega_error">Debes seleccionar el distrito de entrega</string>
    <string name="registrar_cliente_activity_datos_basicos_departamentofiscal_error">Debes seleccionar el departamento de fiscal</string>
    <string name="registrar_cliente_activity_datos_basicos_provinciafiscal_error">Debes seleccionar el departamento de fiscal</string>
    <string name="registrar_cliente_activity_datos_basicos_distritofiscal_error">Debes seleccionar el distrito de fiscal</string>
    <string name="registrar_cliente_activity_datos_basicos_subcanal_dialog_ok">OK</string>
    <string name="registrar_cliente_activity_datos_basicos_tamanio_error">Debes seleccionar un tamaño</string>
    <string name="registrar_cliente_activity_datos_basicos_tamanio_dialog_ok">OK</string>
    <string name="registrar_cliente_activity_datos_basicos_confirm_nuevo_dialog">¿Desea registrar el nuevo cliente?</string>
    <string name="registrar_cliente_activity_datos_basicos_confirm_update_dialog">¿Desea guardar los cambios?</string>
    <string name="registrar_cliente_activity_datos_basicos_confirm_dialog_si">Si</string>
    <string name="registrar_cliente_activity_datos_basicos_confirm_dialog_no">No</string>
    <string name="registrar_cliente_activity_datos_basicos_confirm_registrado">Cliente registrado</string>
    <string name="registrar_cliente_activity_datos_basicos_confirm_actualizado">Cliente actualizado</string>
    <string name="registrar_cliente_activity_datos_basicos_distribuidor_error">Debes seleccionar un distribuidor</string>
    <string name="registrar_cliente_activity_datos_basicos_distritocomercial_error">Debes seleccionar un distrito comercial</string>
    <string name="registrar_cliente_activity_datos_basicos_distritogeografico_error">Debes seleccionar un distrito geográfico</string>
    <string name="registrar_cliente_activity_datos_basicos_zona_error">Debes seleccionar una zona</string>
    <string name="registrar_cliente_activity_datos_basicos_ruta_error">Debes seleccionar una ruta</string>
    <string name="registrar_cliente_activity_datos_basicos_segmento_error">Debes seleccionar un segmento</string>
    <string name="registrar_cliente_activity_datos_basicos_ubicacion_error">Debes seleccionar una ubicación</string>
    <string name="registrar_cliente_activity_datos_basicos_gps_error">Debes seleccionar la ubicación el cliente</string>
    <string name="registrar_documentos_activity_title">Adjuntar Documentos</string>
    <string name="registrar_adjuntar_documentos_activity_tomar">Tomar Foto</string>
    <string name="registrar_adjuntar_documentos_activity_ver">Ver Foto</string>
    <string name="descargartipodocumentos_activity_title">Descargar Tipo Documento</string>
    <string name="descargartipodocumentos_activity_message_title">Descargar Tipo Documento</string>
    <string name="descargartipodocumentos_activity_message_ok">Tipo Documento Descargados</string>
    <string name="descargartipodocumentos_activity_message_error">Error descargando tipos de documentos, por favor vuelva a intentar</string>
    <string name="descargartipodocumentos_activity_message">Click en el botòn aceptar para descargar los tipos de documentos.</string>
    <string name="descargartipodocumentos_activity_confirm_dialog_message">¿Desea descargar los tipos de documentos?</string>
    <string name="seleccionar_direccion_activity_aceptar">Aceptar</string>
    <string name="seleccionar_direccion_activity_cancelar">Cancelar</string>
    <string name="sincronizar_clientes_activity_title">Sincronizar Clientes</string>
    <string name="sincronizar_clientes_activity_btnAceptar">Aceptar</string>
    <string name="sincronizar_clientes_activity_btnCancelar">Cancelar</string>
    <string name="sincronizar_clientes_activity_texto">Estas a punto de enviar la información de clientes recolectada, una vez enviada la información no podrá revertirse la operación, click en Aceptar para enviar la información o click en Cancelar para salir.</string>
    <string name="sincronizar_clientes_activity_confirm_dialog_no">No</string>
    <string name="sincronizar_clientes_activity_confirm_dialog_si">Si</string>
    <string name="sincronizar_clientes_activity_confirm_dialog_ok">Ok</string>
    <string name="sincronizar_clientes_activity_confirm_dialog_message">¿Desea enviar la información de clientes?</string>
    <string name="sincronizar_clientes_activity_confirm_dialog_message_ok">La información de clientes ha sido enviada</string>
    <string name="sincronizar_clientes_activity_confirm_dialog_message_error">Error enviado la información de clientes, por favor vuelva a intentar</string>
    <string name="fichasrechazadas_clientes_activity_title">Descargar Fichas Rechazadas</string>
    <string name="fichasrechazadas_clientes_activity_btnAceptar">Aceptar</string>
    <string name="fichasrechazadas_clientes_activity_btnCancelar">Cancelar</string>
    <string name="fichasrechazadas_clientes_activity_confirm_dialog_no">No</string>
    <string name="fichasrechazadas_clientes_activity_confirm_dialog_si">Si</string>
    <string name="fichasrechazadas_clientes_activity_confirm_dialog_ok">Ok</string>
    <string name="fichasrechazadas_clientes_activity_confirm_dialog_message">¿Desea descargar la ficha de clientes?</string>
    <string name="fichasrechazadas_clientes_activity_texto">Estas a punto de descargar las fichas rechazadas, click en Aceptar para descargar la información o click en Cancelar para salir.</string>
    <string name="cabecera_codigo">Código</string>
    <string name="cabecera_plan">Definición del Plan</string>
    <string name="cabecera_objetivo">Objetivo a Alcanzar</string>
    <string name="cabecera_fecha_creacion">Fecha de Creación</string>
    <string name="cabecera_fecha_inicio">Fecha Inicio</string>
    <string name="cabecera_fecha_fin">Fecha Fin</string>
    <string name="cabecera_avance">Avance</string>
    <string name="cabecera_estado">Estado</string>
    <string name="cabecera_sustento">Sustento</string>
    <string name="cabecera_actividades">Actividades</string>
    <string name="cabecera_FecTentativa">Fecha Tentativa</string>
    <string name="cabecera_FecEjecucion">Fecha de Ejecución</string>
    <string name="cabecera_Terminado">Terminado</string>
    <string name="cabecera_Responsable">Responsable</string>
    <string name="cabecera_Eliminar">eliminar</string>
    <string name="cabecera_Editar">editar</string>
    <string name="cabecera_fecha_visita">Fecha de Visita</string>
    <string name="cabecera_detalle_labor">Detalle Labor</string>
    <string name="cabecera_usuario">Usuario</string>
    <string name="cabecera_hora">Hora</string>
    <string name="plandesarrollo_descargarparametros_activity_texto">Para descargar la información de parámetros click en Aceptar y click en Cancelar para salir.</string>
    <string name="plandesarrollo_parametros_activity_btnAceptar">Aceptar</string>
    <string name="plandesarrollo_parametros_activity_btnCancelar">Cancelar</string>
    <string name="vtacero_cabecera_deposito">Código</string>
    <string name="vtacero_cabecera_nombre_cliente">Nombre Cliente</string>
    <string name="vtacero_cabecera_direccion_cliente">Dirección</string>
    <string name="vtacero_cabecera_ruta">Ruta</string>
    <string name="vtacero_cabecera_segmento">Segmento</string>
    <string name="vtacero_cabecera_eqf">Eqf</string>
    <string name="vtacero_cabecera_cantidad">Cant</string>
    <string name="vtacero_cabecera_estado">Estado</string>
    <string name="vtacero_cabecera_motivo_actual">Motivo Semana Actual</string>
    <string name="vtacero_cabecera_obs_actual">Obs Semana Actual</string>
    <string name="vtacero_cabecera_motivo_anterior">Motivo Semana Anterior</string>
    <string name="vtacero_cabecera_obs_anterior">Obs Semana Anterior</string>
</resources>