<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.thira.examples.actionbar.widget.ActionBar
        android:id="@+id/actionBar"
        android:layout_width="fill_parent"
        android:layout_height="44dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <ScrollView android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:fillViewport="true">
            <HorizontalScrollView android:layout_height="fill_parent"
            android:layout_width="fill_parent" 
            android:fillViewport="true">
            
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/tableLayoutCda"
        android:layout_width="2000dip"
        android:layout_height="fill_parent"
        android:shrinkColumns="*" 
        android:stretchColumns="*" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="50dip"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/vtacero_cabecera_deposito" />                
                
                 <TextView
                    android:layout_width="220dip"
                    android:layout_height="wrap_content"
                    android:text="@string/vtacero_cabecera_nombre_cliente" />
                
                  <TextView
                    android:layout_width="220dip"
                    android:layout_height="wrap_content"
                    android:text="@string/vtacero_cabecera_direccion_cliente" />
                               
                
                 <TextView
                    android:layout_width="30dip"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/vtacero_cabecera_ruta" />
                
                  <TextView
                    android:layout_width="60dip"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/vtacero_cabecera_segmento" />
                  
                  <TextView
                    android:layout_width="30dip"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/vtacero_cabecera_eqf" /> 
                  
                  <TextView
                    android:layout_width="30dip"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/vtacero_cabecera_cantidad" /> 
                    
                   <TextView
                    android:layout_width="30dip"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/vtacero_cabecera_estado" /> 
                  
                  
                    <TextView
                    android:layout_width="220dip"
                    android:layout_height="wrap_content"
                    android:text="@string/vtacero_cabecera_motivo_actual" />
                   
                    <TextView
                    android:layout_width="220dip"
                    android:layout_height="wrap_content"
                    android:text="@string/vtacero_cabecera_obs_actual" />
                    
                     <TextView
                    android:layout_width="220dip"
                    android:layout_height="wrap_content"
                    android:text="@string/vtacero_cabecera_motivo_anterior" />
                     
                      <TextView
                    android:layout_width="220dip"
                    android:layout_height="wrap_content"
                    android:text="@string/vtacero_cabecera_obs_anterior" />                    
                             
<!--                      <TextView -->
<!--                     android:layout_height="wrap_content" -->
<!--                      android:gravity="center" -->
<!--                     android:layout_width="80dip" -->
<!--                     android:text="" /> -->
                     
                      <TextView
                    android:layout_height="wrap_content"
                     android:gravity="center"
                    android:layout_width="50dip"
                    android:text="" />


            </TableRow>
<View
            android:layout_height="2dip"
            android:background="#FF909090" />

        </TableLayout>
                   

        <ListView
            android:id="@+id/android:list"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="50dip"
            android:layout_marginTop="25dip"
            android:drawSelectorOnTop="false" />

    </RelativeLayout>
    </HorizontalScrollView>
    </ScrollView>
</LinearLayout>