<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
   
  
    <com.google.android.maps.MapView android:id="@+id/mv1" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:clickable="true"
	android:apiKey="@string/apikey"/>
  	
  	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

		
		 <Button android:text="@string/seleccionar_direccion_activity_aceptar" 
		 android:id="@+id/btnAceptar" 
		 	android:onClick="btnAceptar_onclick" 
		 	android:layout_width="wrap_content" 
		 	android:focusable="false"
		 	android:layout_height="wrap_content"
		 	android:layout_below="@+id/mv1"
		 	android:layout_alignParentLeft="true"/>
		 	
		 <Button android:text="@string/seleccionar_direccion_activity_cancelar" 
		 android:id="@+id/btnCancelar" 
		 android:focusable="false"
		 android:onClick="btnCancelar_onclick" 
		 android:layout_width="wrap_content" 
		 android:layout_height="wrap_content"
		 android:layout_below="@+id/mv1"
		 android:layout_alignParentRight="true"/>
	</RelativeLayout>
  
</RelativeLayout>