<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  
   <com.thira.examples.actionbar.widget.ActionBar
		android:id="@+id/actionBar" 
		android:layout_width="fill_parent"
		android:layout_height="44dip" 
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true" />
 
 <LinearLayout
 android:id="@+id/lytDeclaratoria"
 android:layout_below="@+id/actionBar"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" >
  
  <TextView android:id="@+id/txtAcuerdo"
  	style="@style/TextViewCustomHight"
  	android:padding="5dip"
  			android:text="@string/plandesarrollo_descargarparametros_activity_texto"
  			android:layout_width="fill_parent" 
    		android:layout_height="fill_parent"></TextView>
  
  </LinearLayout>
 
    	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

		 <Button android:text="@string/plandesarrollo_parametros_activity_btnAceptar" android:id="@+id/btnAceptar" 
		 	android:onClick="btnAceptar_onclick"
		 	android:layout_width="wrap_content" 
		 	android:layout_height="wrap_content"
		 	android:focusable="false"
		 	android:layout_below="@+id/txtAcuerdo"
		 	android:layout_alignParentLeft="true"/>
		 	
		 <Button android:text="@string/plandesarrollo_parametros_activity_btnCancelar" 
		 android:id="@+id/btnCancelar" 
		 android:onClick="btnCancelar_onclick"
		 android:layout_width="wrap_content" 
		 android:layout_height="wrap_content"
		 android:focusable="false"
		 android:layout_below="@+id/txtAcuerdo"
		 android:layout_alignParentRight="true"/>
	</RelativeLayout>
  
</RelativeLayout>